fix color contrast

--- a/components/animated_texts/animated_texts.module.scss
+++ b/components/animated_texts/animated_texts.module.scss
@@ -21,7 +21,6 @@
   position: absolute;
   width: 100%;
   font-size: $mobile-subtitle-size;
-  color: $highlight;
   text-align: center;
   user-select: none;
 }
