--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -74,7 +74,6 @@ $animation_duration: 1s;
     letter-spacing: 1.5px;
     font-weight: bold;  
     font-family: 'arefRuqaaInk', 'roboto', sans-serif;
-    color: $highlight;
   }
 
   &__welcome {
